# MyRO

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.md  configure  configure.ac  version
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
doc/: Makefile.am  Makefile.in  myro.aux  myro.tex  myro.toc
doc/html/: index.html  myromain.html  myrotab.html
scripts/: Makefile.am  Makefile.in  myro  myro.in
sql/: Makefile.am  Makefile.in  add_group.sql  check.sql  create_myro.sql  del_group.sql  drop_myro.sql  extview.sql  mod_user.sql  protect.sql  remprotect.sql  set_user_grant.sql  udf.sql  update_user_list.sql
src/: Makefile.am  Makefile.in  config.h  config.h.in  config.h.in~  libmyro.cc  udf_utils.hh
