# ----------------------------------------------------------------------^
# Copyright (C) 2004, 2005, 2006, 2007 Giorgio Calderone <gcalderone@ifc.inaf.it>
# 
# This file is part of MYRO.
# 
# MYRO is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
# 
# MYRO is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with MYRO; if not, write to the Free Software
# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
# 
# ----------------------------------------------------------------------$

sqldir = $(pkgdatadir)/sql
dist_sql_DATA = \
            check.sql            \
            create_myro.sql      \
            drop_myro.sql        \
            udf.sql              \
            update_user_list.sql \
            protect.sql          \
            extview.sql          \
            remprotect.sql       \
            add_group.sql        \
            del_group.sql        \
            mod_user.sql         \
            set_user_grant.sql
